--- a/static/batch-share.css
+++ b/static/batch-share.css
@@ -488,7 +488,7 @@ body {
     box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
 }
 
-.download-progress_inner {
+.download-progress-inner {
     height: 100%;
     background-color: #409eff;
     width: 0;
